clusters/beryjuio-prod/splunk/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: splunk
  name: splunk
  namespace: splunk
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: splunk
  serviceName: "splunk"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: splunk
    spec:
      containers:
        - name: splunk
          image: splunk/splunk:9.0.3
          ports:
            - containerPort: 8000
              name: http
            - containerPort: 8088
              name: http-collector
          resources:
            requests:
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 120
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - name: data
              mountPath: /opt/splunk/var
            - name: config
              mountPath: /opt/splunk/etc
            - name: default
              mountPath: /tmp/defaults/
      volumes:
        - name: default
          configMap:
            name: beryjuorg-splunk-default
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 200Gi
        accessModes:
          - ReadWriteOnce
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 10Gi
        accessModes:
          - ReadWriteOnce
