clusters/beryjuio-prod/splunk/vs-splunk.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryjuorg-gw-splunk
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryjuorg-authentik-proxy-infra
      hosts:
        - splunk.infra.beryju.org
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - splunk.infra.beryju.org
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryjuorg-vs-splunk
  namespace: istio-system
spec:
  gateways:
    - beryjuorg-gw-splunk
  hosts:
    - splunk.infra.beryju.org
  http:
    - route:
        - destination:
            host: splunk.splunk.svc.cluster.local
            port:
              number: 8000
          weight: 100
